--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         </form>
       </div>
     </aside>
-    <footer =id="doc-footer">
+    <footer id="doc-footer">
 <nav id="legal">
 <ul >
   <li> 
@@ -190,9 +190,10 @@
     </li>
   </li>
 </ul>
+</nav>
 
 <nav id="social">
-<ul>
+<ul class="flexyhexy">
   <li class="icon-facebook">
     <a href="https://www.facebook.com/" target="_blank"></a>
   </li>
@@ -206,12 +207,12 @@
 
 </nav>
 
-</nav>
 
 
 
 
-</nav>
+
+
     </footer>
     <script src="js/menu.js"></script>
   </body>
